[project]
name = "ChronoTagger"
version = "0.1.0"
description = "A tool to add dates to images based on filename patterns."
authors = [
    {name = "Carlos Larriu", email = "larriucarlos@gmail.com"},
]
dependencies = [
    "Pillow>=10.4.0",
    "piexif>=1.1.3",
    "tqdm>=4.66.5",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
"Homepage" = "https://github.com/clarriu97/ChronoTagger"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.pdm.scripts]
chronotagger = "chronotagger.script:main"

[tool.pdm]
